--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 
-<app-prueba></app-prueba>
-<app-lista></app-lista>
+<!--<app-prueba></app-prueba>-->
+<!--<app-lista></app-lista>-->
+<!--<app-animacion></app-animacion>-->
+<app-notas></app-notas>
+
+
