--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
 <!--<app-prueba></app-prueba>-->
 <!--<app-lista></app-lista>-->
 <!--<app-animacion></app-animacion>-->
-<app-notas></app-notas>
+<!--<app-notas></app-notas>-->
+<!--<app-galeria></app-galeria>-->
+<app-tareas></app-tareas>
+
 
 
