--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,11 @@
 <!--<app-animacion></app-animacion>-->
 <!--<app-notas></app-notas>-->
 <!--<app-galeria></app-galeria>-->
-<app-tareas></app-tareas>
+<!--<app-tareas></app-tareas>-->
+<!--<app-calculadora-compras></app-calculadora-compras>-->
+<!--<app-encuesta></app-encuesta>-->
+<app-contactos></app-contactos>
+
 
 
 
